integration css .intro

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -9,6 +9,7 @@
 @import "settings/colors";
 @import "settings/fonts";
 @import "settings/sizes.styl"
+@import "settings/links.styl"
 
 // Load mixins & functions
 @import "core/utils.styl"
@@ -29,6 +30,7 @@
 
 // Objects
 @import "objects/header.styl"
+@import "objects/home.styl"
 
 // Components
 @import "components/navigation.styl"
@@ -36,6 +38,9 @@
 @import "components/global.styl"
 //// HOME
 @import "components/home/intro.styl"
+
+// Tools
+
 
 // Trumps
 // --- nothing here (yet)
