--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -6,9 +6,12 @@ $cWhite = #FFF
 
 $cBlack = #353D47
 
+$cBlueTitles = #243D59
+
 $cBlueWeb = #004A8C
 $cPinkDG = #D81B60
 $cGreen3D = #00796B
+
 
 $cBlueGreyLight = #F5F5FA
 $cBlueCiel = #136A8A
