--- a/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
@@ -1,10 +1,16 @@
+// Text
 $sz-menu = 18
-
-
-
-
 $text-XXXXL = 64.85
+$text-bigTitleHome = 51.88
 $text-XXXL = 41.5
 $text-XXL = 33.2
 $text-XL = 26.56
 $text-L = 21.25
+
+// GridzWidth
+containerGridz()
+  max-width s($ws_sGridzTotalWidth, 16)
+  margin 0 auto
+
+$paddingSideGlobal = 30
+
