change size grid 1180 to 1260

--- a/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
@@ -4,7 +4,7 @@
   clearfix(both)
   &__content
     float left
-    width col(5, $ws_iGridzColumns) + gutter(12)
+    width col(5, $ws_iGridzColumns)
     clearfix(both)
   &__title
     max-width s(375, $text-bigTitleHome)
