--- a/ecoleinfographie/resources/assets/stylus/objects/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/objects/header.styl
@@ -4,7 +4,7 @@
 .header
   position: relative
   &__wrapper
-    max-width s(1170, 16)
+    max-width s($ws_sGridzTotalWidth, 16)
     margin 0 auto
     clearfix(both)
   & .nav
