style bloc location in homepage

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -38,6 +38,7 @@
 @import "components/global.styl"
 //// HOME
 @import "components/home/intro.styl"
+@import "components/home/location.styl"
 
 // Tools
 
