--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -1,5 +1,10 @@
-html 
+html
   overflow-x: hidden;
+  background-image url("../img/gridinator.png")
+  background-repeat repeat-y
+  background-position center center
+  background-size 1240px
+  opacity 1
 
 html *
   box-sizing border-box
@@ -9,12 +14,7 @@ html *
   -moz-osx-font-smoothing antialiased
   -moz-osx-font-smoothing: grayscale
   color $cText-greyblue
-  
-  /*background-image url("../images/grid.png")
-  background-repeat repeat-y
-  background-position center center
-  background-size 1140px
-  opacity 0.90*/
+
 
 
 a
