code and style bloc news-home

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -9,7 +9,7 @@
 @import "settings/colors";
 @import "settings/fonts";
 @import "settings/sizes.styl"
-@import "settings/links.styl"
+
 
 // Load mixins & functions
 @import "core/utils.styl"
@@ -19,6 +19,9 @@
 @import "core/kaduk.styl"
 @import "core/gridz.styl"
 @import "core/sprite.styl"
+
+// Tools
+@import "tools/links.styl"
 
 // Load styles
 
@@ -39,8 +42,7 @@
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
-
-// Tools
+@import "components/home/news-home.styl"
 
 
 // Trumps
