--- a/ecoleinfographie/resources/assets/stylus/components/home/location.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/location.styl
@@ -1,8 +1,9 @@
 .home
   .location
     position: relative
-    min-height s(300, 16)
+    min-height s(300)
     containerGridz()
+    margin-bottom s(150)
     &__wrapper
       position: absolute
       height 100%
