--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -11,9 +11,11 @@ $cBlueTitles = #243D59
 $cBlueWeb = #004A8C
 $cPinkDG = #D81B60
 $cGreen3D = #00796B
+$cSchool = #9B9B9B
 
 
 $cBlueGreyLight = #F5F5FA
+$cBackgroundBlueGrey = #F3F3F7
 $cBlueCiel = #136A8A
 
 $cGrey-lineMenu = #D5D5D9
