--- a/ecoleinfographie/resources/assets/stylus/tools/links.styl
+++ b/ecoleinfographie/resources/assets/stylus/tools/links.styl
@@ -16,3 +16,13 @@ linkArrowLarge()
   &:hover:after
     transform translateX(s(4, 12))
     transition .3s ease transform
+
+
+CategoryStyle()
+  display: inline-block
+  Catamaran(13, 16, 600, 1)
+  color $cWhite
+  text-transform: uppercase
+  letter-spacing 0.75px
+  padding s(9, 13) s(20, 13)
+  border-radius 17px 0 17px 0
