--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -4,7 +4,7 @@ html
   background-repeat repeat-y
   background-position center center
   background-size 1240px
-  opacity 1
+  //opacity 0.9
 
 html *
   box-sizing border-box
