create style base for cards blog

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -43,6 +43,7 @@
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
 @import "components/home/news-home.styl"
+@import "components/home/sliderBlog.styl"
 
 
 // Trumps
