--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -15,6 +15,16 @@ html *
   -moz-osx-font-smoothing: grayscale
   color $cText-greyblue
 
+[role="button"],
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
 
 
 a
