--- a/ecoleinfographie/resources/assets/stylus/components/home/sliderBlog.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/sliderBlog.styl
@@ -31,7 +31,7 @@
   clearfix()
   background-color $cWhite
   box-shadow 0 0 2px 0 rgba(169,169,169,0.50);
-  margin-bottom 200px
+  margin-bottom s(40)
   &-wrapper
     containerGridz()
   &__imgWrapper
@@ -66,3 +66,45 @@
     text-indent: -9999px;
     z-index: 13;
 
+.home
+  .sliderBlog
+    &__dots-wrapper
+      text-align: center
+      margin-bottom 100px
+    &__dots-list
+      position: relative
+      display inline-block
+      margin 0
+      padding 0
+      list-style none
+      cursor default
+      user-select none
+    &__dots-item
+      position relative
+      display block
+      float left
+      margin 0 s(12)
+      width s(22)
+      height s(22)
+      cursor pointer
+    &__dots-item__dot
+      position absolute
+      top 0
+      left 0
+      width 100%
+      height 100%
+      outline none
+      border-radius s(50)
+      background-color $cBlueCiel
+      background-color rgba(19, 106, 128, 0.3)
+      text-indent -9999px
+      cursor pointer
+      background-color transparent
+      box-shadow inset 0 0 0 2px $cBlueCiel
+      -webkit-transition box-shadow 0.3s ease
+      transition box-shadow 0.3s ease
+      &:hover
+      &:focus
+        box-shadow: inset 0 0 0 2px rgba(19, 106, 128, 0.6)
+    &__dots-item.current .sliderBlog__dots-item__dot
+      box-shadow inset 0 0 0 s(12) $cBlueCiel
