--- a/ecoleinfographie/resources/assets/stylus/components/home/sliderBlog.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/sliderBlog.styl
@@ -1,6 +1,7 @@
 .home
   .sliderBlog
     &-section
+      containerGridz()
       &__title
         margin-bottom s(100)
         text-align center
@@ -26,14 +27,12 @@
 
 .sliderBlog
   position: relative
-  max-width col(10,12) + gutter(12) + gutter(12)
+  width 100%
   margin 0 auto
   clearfix()
   background-color $cWhite
-  box-shadow 0 0 2px 0 rgba(169,169,169,0.50);
+  border 1px solid lightgrey
   margin-bottom s(40)
-  &-wrapper
-    containerGridz()
   &__imgWrapper
     position: absolute
     float: left
@@ -94,17 +93,54 @@
       width 100%
       height 100%
       outline none
-      border-radius s(50)
+      border-radius 50px
       background-color $cBlueCiel
       background-color rgba(19, 106, 128, 0.3)
       text-indent -9999px
       cursor pointer
       background-color transparent
       box-shadow inset 0 0 0 2px $cBlueCiel
-      -webkit-transition box-shadow 0.3s ease
-      transition box-shadow 0.3s ease
+      transform translateZ(0)
+      transition .3s ease all
+      transition-property transform, box-shadow
       &:hover
       &:focus
         box-shadow: inset 0 0 0 2px rgba(19, 106, 128, 0.6)
     &__dots-item.current .sliderBlog__dots-item__dot
-      box-shadow inset 0 0 0 s(12) $cBlueCiel
+      transition .6s ease all
+      transition-property transform, box-shadow
+      transform translateZ(0)
+      box-shadow inset 0 0 0 22px $cBlueCiel
+
+// Slider Position
+.home
+  .sliderBlog-wrapper
+    position: relative
+    min-height 599px
+    max-width col(10,12) + gutter(12) + gutter(12)
+    margin: 0 auto
+    overflow hidden
+  .sliderBlog-list
+    position: absolute
+    top: 0
+    right: 0
+    width 100%
+    height 100%
+  .sliderBlog-item
+    position: absolute
+    top 0
+    left 0
+    float left
+    transition .4s ease-in-out transform
+  .sliderBlog-item--2
+    transform translateX(100%)
+  .sliderBlog-item--3
+    transform translateX(200%)
+
+
+
+
+
+
+
+
