create function for shawl effect

--- a/ecoleinfographie/resources/assets/stylus/components/global.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/global.styl
@@ -1,18 +1,21 @@
 body
   overflow hidden
 
+baseShawl(backgroundColor, skew)
+    background-color backgroundColor
+    z-index 1
+    &:before
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      transform: skewY(skew);
+      transform-origin: 100% 0;
+      bottom: -300%;
+      background-color: backgroundColor
+      z-index -1
+
 .container
   position: relative
-  background-color $cWhite
-  z-index 1
-  &:before
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    transform: skewY(4deg);
-    transform-origin: 100% 0;
-    bottom: -300%;
-    background-color: $cWhite
-    z-index -1
+  baseShawl($cWhite, 4.5deg)
