add news icons to icons font

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -36,7 +36,10 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "triangle"   "\e923",
                       "twitter"   "\e924",
                       "world"   "\e925",
-                      "world2"   "\e926"
+                      "world2"   "\e926",
+                      "logo2D"   "\927",
+                      "logo3D"    "\e928",
+                      "logoweb"   "\e929"
 
 
 
