create first styles for porfolio-home & project

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -44,6 +44,7 @@
 @import "components/home/location.styl"
 @import "components/home/news-home.styl"
 @import "components/home/sliderBlog.styl"
+@import "components/home/portfolio-home.styl"
 
 
 // Trumps
