Add effect :hover on portfolio-home

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -37,7 +37,7 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "twitter"   "\e924",
                       "world"   "\e925",
                       "world2"   "\e926",
-                      "logo2D"   "\927",
+                      "logo2D"   "\e927",
                       "logo3D"    "\e928",
                       "logoweb"   "\e929"
 
