--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -45,6 +45,7 @@
 @import "components/home/news-home.styl"
 @import "components/home/sliderBlog.styl"
 @import "components/home/portfolio-home.styl"
+@import "components/home/pros-home.styl"
 
 
 // Trumps
