--- a/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
@@ -2,6 +2,7 @@
 $sz-menu = 18
 $sz-buttons = 18
 $sz-textS = 17
+$sz-textSL = 18
 $text-XXXXL = 64.85
 $text-bigTitleHome = 51.88
 $text-XXXL = 41.5
