slider click to next effect base

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -35,10 +35,12 @@
 @import "objects/header.styl"
 @import "objects/home.styl"
 
+
 // Components
 @import "components/navigation.styl"
 @import "components/header.styl"
 @import "components/global.styl"
+@import "components/_dots.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
