--- a/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
@@ -51,10 +51,13 @@
       margin 0
       height 100%
       min-height 500px
+      overflow hidden
     &__description
       width 67.363530778%
       float: right
       position: relative
+      top s(50)
+      //overflow: hidden;
       &:after
         content ''
         display: block
@@ -65,23 +68,23 @@
         height 50px
         z-index 13
         background-color $cWhite
+      &:before
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        transform: skewY(-4.5deg);
+        transform-origin: 100% 0;
+        bottom: 0;
+        background-color: $cBackgroundBlueGrey
+        z-index -1
       //z-index 12
       &__inside
         padding: s(75) s(50) s(80) s(132)
         right: 0;
         transform: translate3d(0,0,0);
         //background $cBackgroundBlueGrey
-        &:before
-          content: "";
-          position: absolute;
-          top: 0;
-          right: 0;
-          left: 0;
-          transform: skewY(-4.5deg);
-          transform-origin: 100% 0;
-          bottom: 0;
-          background-color: $cBackgroundBlueGrey
-          z-index -1
       &__title
         Catamaran($text-XXL, 16, 700, 1.1)
         color $cBlueTitles
@@ -108,8 +111,8 @@
     &__image
       width 39.256678281%
       position: absolute
-      top: s(-20)
-      z-index 12
+      top: s(0)
+      z-index 250
       overflow: hidden
       &:before
         content: "";
@@ -122,3 +125,38 @@
         bottom: s(330);
         background-color: $cWhite
         z-index 1
+
+.slider-pros__article--anim
+  & .slider-pros__description__inside
+    transition: transform .2s cubic-bezier(.25, .46, .45, .94)
+  & .slider-pros__image img
+    transition: transform .4s cubic-bezier(.25, .46, .45, .94)
+
+.slider-pros__article--active
+  visibility visible
+  & .slider-pros__description__inside
+    position: relative
+    z-index 200
+    transform: translate3d(0, 0, 0)
+  & .slider-pros__image
+    z-index 500
+  & .slider-pros__image img
+    transform: translate3d(0, 0, 0)
+
+.slider-pros__article--hidden
+  visibility hidden
+  & .slider-pros__description__inside
+    opacity 0
+    transform translate3D(-100%, 0, 0)
+    transition .4s ease all
+  & .slider-pros__image img
+    transform translate3D(-100%,0,0)
+    transition .4s cubic-bezier(.25, .46, .45, .94)
+
+.slider-pros__article--right
+  & .slider-pros__description__inside
+    opacity 0
+    transform translate3D(100%, 0, 0)
+    transition .4s ease all
+  & .slider-pros__image img
+    transform translate3D(100%, 0, 0)
