--- a/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
@@ -160,3 +160,11 @@
     transition .4s ease all
   & .slider-pros__image img
     transform translate3D(100%, 0, 0)
+
+.slider-pros__article--left
+  & .slider-pros__description__inside
+    opacity 0
+    transform translate3D(100%, 0, 0)
+    transition .4s ease all
+  & .slider-pros__image img
+    transform translate3D(100%, 0, 0)
