create svg and animate arrow-circle for sliderBlog

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -41,6 +41,7 @@
 @import "components/header.styl"
 @import "components/global.styl"
 @import "components/_dots.styl"
+@import "components/_arrow-circle.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
