create js for dots and create base footer

--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -33,6 +33,7 @@ button {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
+  cursor pointer
 }
 
 /* Reset `button` and button-style `input` default styles */
