--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -33,12 +33,15 @@
 
 // Objects
 @import "objects/header.styl"
+@import "objects/footer.styl"
 @import "objects/home.styl"
+
 
 
 // Components
 @import "components/navigation.styl"
 @import "components/header.styl"
+@import "components/footer.styl"
 @import "components/global.styl"
 @import "components/_dots.styl"
 @import "components/_arrow-circle.styl"
