--- a/ecoleinfographie/resources/assets/stylus/components/global.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/global.styl
@@ -12,7 +12,7 @@ baseShawl(backgroundColor, skew)
       left: 0;
       transform: skewY(skew);
       transform-origin: 100% 0;
-      bottom: -300%;
+      bottom: -1px;
       background-color: backgroundColor
       z-index -1
 
