--- a/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
@@ -2,6 +2,9 @@
   .intro
     box-sizing content-box
     padding s(150, 16) s($paddingSideGlobal, 16) 0
+    background-color $cWhite
+    z-index 1
+    overflow hidden
     clearfix(both)
     &__content
       float left
