--- a/ecoleinfographie/resources/assets/stylus/components/global.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/global.styl
@@ -19,3 +19,79 @@ baseShawl(backgroundColor, skew)
 .container
   position: relative
   baseShawl($cWhite, 4.5deg)
+
+
+
+.containerGridz
+  max-width s($ws_sGridzTotalWidth, 16)
+  margin 0 auto
+  box-sizing content-box
+
+.hidden
+  position: absolute
+  top: -99999px
+  left: -99999px
+
+/************************************\
+		STYLES FOR TITLES
+\************************************/
+
+.title51
+  font-size s(51.88)
+  line-height 1.1
+  letter-spacing 1px
+  font-weight 700
+  color $cBlueTitles
+
+.title41
+  font-size s(41.5)
+  line-height 1.1
+  letter-spacing 1px
+  font-weight 700
+  color $cBlueTitles
+
+.titleXXL
+  font-size s($text-XXL)
+  line-height 1.1
+  letter-spacing 1px
+  font-weight 700
+  color $cBlueTitles
+
+.titleXL
+  font-size s($text-XL)
+  line-height 1.1
+  letter-spacing .75px
+  font-weight 700
+  color $cBlueTitles
+
+/************************************\
+      STYLES FOR PARAGRAPH
+\************************************/
+.paragraph21
+  font-size s(21.25)
+  line-height 1.62em
+
+/************************************\
+		STYLE FOR LINKS
+\************************************/
+
+.linkArrowLarge
+  display: inline-block
+  font-size s($text-L)
+  font-weight 600
+  line-height 1.2
+  color $cBlueCiel
+  letter-spacing 0.3px
+  transition .2s ease color
+  &:after
+   icon('arrow-right')
+   display inline-block
+   font-size s(12, $text-L)
+   margin-left  s(10, 12)
+   transition .2s ease transform
+  &:hover
+   color $cBlack
+   transition .3s ease color
+  &:hover:after
+   transform translateX(s(4, 12))
+   transition .3s ease transform
