add logo link to navigation

--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -1,6 +1,5 @@
 .header-shawl
   background linear-gradient(138deg, rgba(12,81,107,0.92) 0%, rgba(5,43,56,0.96) 80%), url("../img/header-home-background.jpg") no-repeat center center/cover
-
   &__title
     position: absolute
     left: 0
@@ -64,3 +63,12 @@
     background none
     color $cWhite
     filter none
+
+.logo
+  position: relative
+  top s(15, 18)
+  color $cWhite
+  font-weight: 700
+  font-size 18px
+  letter-spacing 1px
+  padding s(10, 18) s(0)
