--- a/ecoleinfographie/resources/assets/stylus/components/footer.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/footer.styl
@@ -66,9 +66,13 @@
       font-weight: 400
       letter-spacing 0
       margin-bottom s(15, $text-L)
+      transform translateX(0)
+      transition .3s ease
       &:hover
       &:focus
         color $cWhite
+        transform translateX(3px)
+        transition .2s ease
     &__address
       margin-bottom s(35)
       span
