--- a/ecoleinfographie/resources/assets/stylus/components/global.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/global.styl
@@ -98,3 +98,17 @@ baseShawl(backgroundColor, skew)
   &:focus:after
    transform translateX(s(4, 12))
    transition .3s ease transform
+
+
+
+
+/************************************\
+		cover absolute
+\************************************/
+
+.cover
+  position absolute
+  top: 0
+  bottom: 0
+  right: 0
+  left: 0
